Changes made in all at the end of the day

--- a/css/style.css
+++ b/css/style.css
@@ -271,9 +271,10 @@ select {
   background-color: #f7941d;
 }
 
-figure .col-xtr-sm{
-  width: 50% !important;
-}
 .justify_para{
   text-align: justify;
+}
+
+.figcaption{
+  text-align: center;
 }
